--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "express": "^4.17.1",
     "moment": "^2.29.1",
+    "sharp": "^0.27.0",
     "socket.io": "^3.0.4"
   }
 }
